Scale table down correctly on small screens
Ensures the first four columns (up to Total points) are always visible.
Wouldn't call this a hack because I think this is how it was supposed to
work? Either way I think it's brilliant = P

--- a/assets/results_template/style.scss
+++ b/assets/results_template/style.scss
@@ -31,6 +31,12 @@ div.results-classic-wrapper {
   height: 100vh;
   // always show scrollbar area on Firefox for layout consistenty when filtering
   overflow-y: scroll;
+  // ensure that the first four table columns are always visible, even on small
+  // screens (e.g. 320px or less)
+  font-size: 0.9375rem; // up from default of 14px (if 1rem = 16px)
+  @media (max-width: 26.0625rem) { // ensure smooth transition
+    font-size: 3.6vw;
+  }
   // also used to change table layout when focusing on one event
 }
 
